css/cover.css
/*
 * Globals
 */

/* Custom default button */
.btn-secondary,
.btn-secondary:hover,
.btn-secondary:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritance from `body` */
}

/*
 * Base structure
 */

body {
  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
}

.cover-container {
  max-width: 42em;
}

main,
main * {
  z-index: 1;
}

/*
 * Header
 */

.nav-masthead .nav-link {
  padding: 0.25rem 0;
  font-weight: 700;
  color: rgba(255, 255, 255, 0.5);
  background-color: transparent;
  border-bottom: 0.25rem solid transparent;
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
  border-bottom-color: rgba(255, 255, 255, 0.25);
}

.nav-masthead .nav-link + .nav-link {
  margin-left: 1rem;
}

.nav-masthead .active {
  color: #fff;
  border-bottom-color: #fff;
}

/*
 *Typography
 */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "EB Garamond", Georgia, "Times New Roman", Times, serif;
}

/*
 *Media Backdrop  
 */
.media-backdrop {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  background-image: url("../images/jzx-1.jpg");
  background-size: cover;
  background-position: center;
  max-height: 100vh;
  overflow: hidden;
}

.media-backdrop::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: black;
  opacity: 0;
  z-index: -1;
}

#bg-video {
  opacity: 0;
  transition: opacity 2s ease;
}

#bg-video.ready {
  opacity: 1;
  transition: opacity 2s ease;
}

/* First Para */
#intro {
  min-height: 100vh;
  padding-top: 65vh;
  background: rgb(0, 0, 0);
  background: linear-gradient(
    180deg,
    rgba(0, 0, 0, 0) 0%,
    rgba(0, 0, 0, 0) 46%,
    rgba(0, 0, 0, 1) 100%
  );
}

#intro h1 {
  font-weight: 500;
}

/* Buttons */
.btn {
  text-transform: uppercase;
  letter-spacing: 1px;
}

/* Contact Methods List */
.contact-list {
  display: flex;
  flex-direction: row;
  /* justify-content: flex-start; */
  align-items: center;
  list-style: none;
  padding-left: 0;
  text-transform: uppercase;
}

.contact-list li:first-child {
  letter-spacing: 1.5px;
  border-right: 2px solid rgba(255,255,255,0.5);
  padding-right: 10px;
  font-style: italic;
}

.contact-list li:not(:first-child) {
  padding: 0;
  margin-left: 1.5rem;
}

.contact-list li a {
  text-decoration: none;
  display: block;
}

.contact-list li:not(:first-child) i {
  display: block;
  font-size: 1.5rem;
  line-height: 1;
}

